--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -1,22 +1,22 @@
-@import "normalize.css";
+@import 'normalize.css';
 
-@import "base/variables";
-@import "base/baseline";
-@import "base/utility-classes";
+@import 'base/variables';
+@import 'base/baseline';
+@import 'base/utility-classes';
 
-@import "modules/row";
-@import "modules/site-header";
-@import "modules/main-navigation";
-@import "modules/mobile-navigation";
-@import "modules/dropdown-menu";
-@import "modules/page-banner";
-@import "modules/page-section";
-@import "modules/about";
-@import "modules/btn";
-@import "modules/headline";
-@import "modules/generic-content-container";
-@import "modules/purchase";
-@import "modules/gallery";
-@import "modules/partners";
-@import "modules/footer-widgets";
-@import "modules/site-footer";
+@import 'modules/row';
+@import 'modules/site-header';
+@import 'modules/main-navigation';
+@import 'modules/mobile-navigation';
+@import 'modules/dropdown-menu';
+@import 'modules/page-banner';
+@import 'modules/page-section';
+@import 'modules/about';
+@import 'modules/btn';
+@import 'modules/headline';
+@import 'modules/generic-content-container';
+@import 'modules/purchase';
+@import 'modules/gallery';
+@import 'modules/partners';
+@import 'modules/footer-widgets';
+@import 'modules/site-footer';
