--- a/app/assets/css/modules/page-section.css
+++ b/app/assets/css/modules/page-section.css
@@ -14,7 +14,7 @@
   }
 
   &--partners {
-    background: url(../../../assets/images/partnersbg.jpg) no-repeat;
+    background: url(../../assets/images/partnersbg.jpg) no-repeat;
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
